Added Partners and Productions

--- a/Oct '18 Web Launch.org
+++ b/Oct '18 Web Launch.org
@@ -816,5 +816,153 @@ We produce a range of products enabling users to transcend time and space throug
 
 *** Partnerships 
 
+A shout to our friends and family.  Without ya'll Nova is nothing.  
+
+Our open door philosophy attracts a range of people from varying communities. This makes Nova Studios an idea hub for crafting market opportunities. 
+
+**** Redu Media
+Redu is making obsolescence obsolete. A close member of Nova's family, Redu is dedicated to upcycling materials that would otherwise go to waste. Amber and Kaya lead /rescues/, traveling throughout the tri state area to collect materials and prevent them from going to landfill. Back inside Redu's design studio, the materials are tastefully crafted into furniture and applied art.
+
+**** Surf-Far
+
+Produces eco-friendly wetsuits for women, by women.   Made of Yulex or recycled neoprene, recycled water bottles, and water based glues Surf-Far designs comfortable and durable wetsuits that have a low impact on the environment.  As surfers, ocean lovers, and humans, is ensuring that future generations have the opportunity to enjoy this earth the way we all enjoy it today.  Brooklyn, New York. 
+
+
+**** Fulla Shirts
+
+Fulla designs and produces T-shirts to order.  As a Red Hook native, Ren and his team know what it means to be Brooklyn, and to deliver style.  Swing by the shop anytime to kick it with a true entrepreneur and a good friend.   
+
+
+**** Potential Synergy 
+At the forefront of XR technology development, Potential Synergy builds lucid dreams. They also build practical XR solutions. At the forefront of the studio's cornerstone products is Dreamscaping - a principle designed to eliminate the dizziness some users experienced inside the Oculus Rift. Their current project - Match Quest - tests short and long term memory. As users succeed within the game, they become closer and closer to obtaining real Ethereum. 
+
+**** Construct Studios   
+With a basis in both San Fran and New York City, Construct studios has built one of the most trafficked VR worlds available to the public - /The Price of Freedom/. They're a team of game developers working to bring XR to varying fields: Medicine, Education, and Industry. https://construct.studio/
+
+**** Aptonomy 
+Aptonomy is a premiere aerial protection service leading the movement into Drone-based security systems.
+
+**** Con Body 
+Coss Marte was serving a seven year prison sentence when doctors told him he could die in the prison cell if he didn't take control of his health. While incarcerated, he designed a physical fitness program and began building toward peak physical condition. Once released, Coss built the current ConBody workout facility in the Lower East Side of Manhattan. Today, you can visit Coss and the former prisoners who work with him. They'll put you through your paces. In a 30 or 60 minute workout, you'll experience the sights, sounds, and workout regimen of the incarcerated. Be ready. 
+https://www.youtube.com/watch?v=3npsu-wnL6o
+
+**** Clinken Films  
+Jon is a storyteller. He began as a writer and stage actor and has spread his storytelling skills with artificial intelligence and Virtual Reality. He's currently developing an interactive story, releasing an episode each week. VR, AI, and snail mail are all forms included.
+
 *** Productions
+
+**** Hard Rock Hotels
+
+*Situation*
+Hard Rock Riviera Maya had a PR objective to earn big media.   They had access to top music talent and a badass resort in Mexico.   
+
+*Solution*
+
+"Elvis Rocks Mexico -  Riviera Maya"
+
+Throw a massive party
+400 attendees 
+Match Top music Talent
+Strategically promoted
+Earn coverage
+
+*Execution*
+Live From Mexico we broadcasted a weekend of dysfunctional family fun to 63 million.   Live music performances from Nick Jonas and Brett Michaels, all the beach, spa and partying anyone person could handle... 
+
+*Results*
+- 201,008,806 Gross Impressions
+- 280,000 contest entries
+- $2.59 million media/PR value (15cpm)
+- 86 million social media impressions
+- 400 attendees
+- $97,000 avg HHI
+- 73% Earned Media
+
+It was the dead cold of winter.  Those endlessly numb days.   It was still dark but half the city was on their way to work.   At 7:29AM while inching through traffic, Elvis Duran in his jolly voice announced to the country his plans for vacation.   His words reverbed live to 75 cities and  was giving away vacations to5 million people.  This May he and his family would be flying to the Hard Rock Riviera Maya Resort in Mexico.
+
+Hyped as the vacation of the year, 400x people purchased packages to join the parties.
+
+We recruited Nick Jonas and Brett Michaels to join.
+
+Over the weekend hundreds lived life to the fullest via Hard Rock's all inclusive, while millions enjoyed vicariously.   The program earned more than 85 million impressions on social media, alone.  
+
+Media outlets across the country picked up the fun, earning more than 200 million impressions and more than $2.5 million in media value.
+
+The vacation has now become a tradition.
+
+**** Hawaiian Airlines
+
+*Situation*
+
+Hawaiian airlines was launching a new flight from JFK direct to Honolulu and needed people to know about it.
+
+*Solution*
+
+Multi-platform promotion through traditional media, digital targeting and on-site activation.
+ 
+*Execution*
+
+Starting in April we surveyed New York metro about airlines, trafficked customized commercial media, called participants to action and produced world-class content.   On-stage in front of thousands of professionals Hawaiian Airlines brought culture to life and associated it with the new route's details. The response was unforgettable. 
+
+*Results*
+
+- Increased brand recognition by 12.1%
+- Click-through rate four times the national average
+- 11% greater reach than predicted
+
+**** Kelly Vision
+
+*Situation*
+
+Dr. Kelly was looking for a way to combine the mass reach of traditional media with modern technologies of digital tracking to quantifiably measure his return on investment
+
+*Objective*
+
+To get people in the door and start taking their considerations of vision enhancement seriously.
+
+Educate and welcome prospective patients into our family and computer system
+
+Evaluate the cost per eye.  
+
+Investment $30,000 to return $35 surgeries.  
+
+*Campaign*
+
+Brand ambassador on 5 top media outlets for full scope of media deliverables.
+
+Promotion code to track business (interests, connections, bookings, payments.
+
+Adjusted content on the fly to improve ROI
+
+*Results*
+
+- Delivered more than $20k in vision business in 21 days.
+
+- 100 surgeries in 10 months
+
+- 50+ phone calls received
+
+- 1,000 + text messages 
+
+**** Taiwan
+
+*Situation*
+
+Taiwan is of the lesser known Asia destinations but has an amazing culture to share. We needed to stand apart from the rest of Asia. Knowing we will not brand bigger than China or Japan in the short-term, we complimented them.
+
+*Strategy*
+
+(1) Bring a credible message about culture, food, beauty and other features of the destination. 
+(2) Transfer the earned trust and credibility of a known personality to highlight “Why Taiwan”. 
+(3) Share from a first person perspective. 
+(4) Develop PR exposure through creative engagement
+
+*Execution*
+ Travel expert, Pauline Frommer, brought the travel show to Taiwan. We created an array of content to share across multiple distribution channels. Integrate with entertainment darlings and showcase the culture through event partnerships in Bryant Park.
+
+*Results*
+- 7% increase in US visits year over year. 
+- Renewed production program at a 45% increase in investment. 
+- 10 million media impressions through “earned media”. 
+- Evergreen content to re-purpose indefinitely.
 
