--- a/Oct '18 Web Launch.org
+++ b/Oct '18 Web Launch.org
@@ -9,15 +9,15 @@ There exceptions to this modification
 1) The format of the products page will remain the same as before with rectangles appearing upon the right panel and the user with the option to click on each rectangle (product) to read further. 
 2) The publications page will remain divided by three tabs across the the top. These will read: 
 - Technologies 
-- Industry News
-- Analysis 
+- Industry Insider
+- Use Cases
 
 We will source all of the most valued and well-written pages from the pre-hacked website (Game Engine, C#, Crossing the Chasm, Google Earth, Financial Strategies, etc.) and divide them among the three subheadings listed above. When clicking on one of the subheadings within “Publications” the user will arrive at a page with rectangles running along the right panel. A click will bring them to the full article. 
 
 3) The subdivision of “Nova XR” will change slightly. Here are the new subcategories 
 - *Who We Are:* This will include “About Us” and “Find Us”
-- *Productions:* This will feature a right panel listing of all our clients 
 - *Partnership:* This will feature a full-body text describing Nova’s philosophy (highly centered on Partnerships). 
+- *Productions:* This will feature a right panel listing of all our clients 
 
 JB/KK agree that “Contacts” (which is currently inside the “About Us” tab and lists various means of connecting with Nova) features too many means of connection and the table appears a bit unprofessional. This table should be designed by JB. 
 
