--- a/Oct '18 Web Launch.org
+++ b/Oct '18 Web Launch.org
@@ -1003,11 +1003,19 @@ After graduating Joe moved to New York to work for Clear Channel as an account e
 
 Upon returning Joe began a Virtual Reality Studio, Nova Media, out of his apartment, and without capital. While assembling a team, Nova bootstrapped its business, producing and developing XR software for individuals and multinational brands.  Today, Joe and Nova continue to produce bleeding edge content from their studio in Red Hook, Brooklyn.  
 
-## Jacques Lalo - 3D Designer
+## Jacques Lalo - Art Director
 
-Born and raised in Paris, Jacques left the city at age 19, enrolling as a pre-med student in the south of France. The study of the human body deepened his understanding of design. The functionality of the lungs, the power of the heart, the connectivity of the muscular system, and all the body's coherency led him back to his home city and to design school where he began to master the principles of architectural design, gradually becoming an expert in the 3D design software Blender, the gold standard and most complex 3D environment driving Virtual Reality creation. 
+Born and raised in Paris, Jacques left the city at age 19, enrolling as a pre-med student in the south of France. The study of the human body deepened his understanding of design. The functionality of the lungs, the power of the heart, the connectivity of the muscular system, and all the body's coherency led him back to his home city and to architectural design school at Ecole Bleue global design school in. Back in Paris, he began mastering the principles of architectural design, gradually becoming an expert in Blender, the gold standard and most complex 3D software environment driving Virtual Reality asset creation. 
 
-In the summer of 2017, Jacques arrived in Brooklyn and became one of Nova's founding members. Thanks to Jacques' intricate understanding of brand creation, the story of Nova deepened, its 3D logo and graphic charter were born, and its image solidified. Novamedia.nyc features Jacques' hand-crafted visuals, each inspired by his understand of design, advanced technology, and Extended Reality as an emerging market. 
+In the summer of 2017, Jacques arrived in Brooklyn and became one of Nova's founding members. Thanks to his intricate understanding of brand creation, the story of Nova deepened. Its 3D logo and graphic charter were born, and its image solidified. Novamedia.nyc features Jacques' hand-crafted visuals, each inspired by his understanding of design, advanced technology, and Extended Reality as an emerging market.
+
+Under the Nova brand, he hand-crafted the characters for a Google-backed 360 experience called Armonia. Only as XR begins attracting more artists of his caliber, will the industry emerge. 
+
+## Kyle Kesses - Marketing Director
+
+Six months after graduating from Fordham University, Kyle became a writer and on-camera broadcaster for the New York Yankees. As part of a small in-house production team at Yankee Stadium, he wrote and voiced an Emmy-winning episodic series in 2016. 
+
+At the start of 2017, he met Joe and tried VR for the first time. After that experience, he went on a deeper journey, researching the history of media, understanding the evolution  mass human connectivity 
 
 * Legals
 
