--- a/Oct '18 Web Launch.org
+++ b/Oct '18 Web Launch.org
@@ -1015,7 +1015,9 @@ Under the Nova brand, he hand-crafted the characters for a Google-backed 360 exp
 
 Six months after graduating from Fordham University, Kyle became a writer and on-camera broadcaster for the New York Yankees. As part of a small in-house production team at Yankee Stadium, he wrote and voiced an Emmy-winning episodic series in 2016. 
 
-At the start of 2017, he met Joe and tried VR for the first time. After that experience, he went on a deeper journey, researching the history of media, understanding the evolution  mass human connectivity 
+At the start of 2017, he met Joe and discovered VR. The experience resonated and sent him on an ensuing journey through the history of media and the evolution of mass human connectivity. He traveled through history from the printing press all the way to the smartphone, a journey that led him back to Nova. He became the team's writer and next co-founder, a role that has evolved into the director of marketing. 
+
+With an affinity for human-to-human connection and simplifying complex concepts into comprehensive writings, Kyle drives Nova's written communication and builds strong relationships with partner studios and 
 
 * Legals
 
